--- a/B3plus/index.html
+++ b/B3plus/index.html
@@ -5,55 +5,7 @@
 </head>
 
 <style></style>
--
+
 <body>
-    <script>
-
-alert('Результат вычечления равен '+calcFragment(prompt("Введите строку","2*(1+3)").split('')));
-alert('Результат вычечления равен '+calcFragment(prompt("Введите строку","2+3*4").split('')));
-
-function calcFragment (arr){
-  
-  var myMath = {
-  "+" : function(a,b){ return a+b },
-  "-" : function(a,b){ return a-b },
-  "*" : function(a,b){ return a*b },
-  "/" : function(a,b){ return a/b },
-  };
-  
-  var i=0;
-  
-  if (isFinite(arr[i])===true){
-    if(arr[i+1] in myMath){
-      var func=myMath[arr[i+1]];
-      var a=arr[i];
-      if (arr[i+2]==='(') var b=calcFragment(arr.slice(i+3, i+6));
-      else 
-        if (arr[i+3]==='*') b=calcFragment(arr.slice(i+2, i+5));
-        else var b=arr[i+2];
-    }
-  }
-
-  return func(Number(a),Number(b));
-}
-
-
-
-//B3+
-//Написать функцию-калькулятор вручную введённого выражения (без использования функции eval и динамического описания функции new Function, если вы знаете о них).
-//Должны работать операции + - * / и скобки, числа должны приниматься целые, дробные (через точку), отрицательные
-//Например, вызываем функцию, передавая ей строку "2*(3+1)", функция возвращает 8.
-
-// Подход может быть таким.
-// Сначала "парсите" выражение - разбиваете его на скобки, операции + - * /, числа.
-// Складываете все найденные компоненты в массив.
-// У вас должна быть функция типа calcFragment, которая умеет вычислять выражение по такому массиву или по его фрагменту; эта функция должна возвращать уже готовый результат, число.
-// Вызываете этот calcFragment, передавая ему ВЕСЬ массив.
-// calcFragment же:
-// проверяет, есть ли скобки; если есть - он выделяет подфрагмент, заключённый в скобки, и вызывает самого же себя рекурсивно для расчёта, и потом результат расчёта вставляет ВМЕСТО скобок, например, если фрагмент был 2 * ( 1 + 3 ), то рекурсивный calcFragment по подфрагменту 1 + 3 вернёт 4, и останется 2 * 4.
-// если скобок нет - находит операцию * и два числа слева и справа, перемножает, и подменяет умножение результатом умножения, например, вместо 2 + 3 * 4 останется 2 + 12
-// аналогично с остальными операциями.
-
-    </script>
-
+    <script src='calculate_v2.js'></script>
 </body>
