N.27 correction of remarks

--- a/N.27/src/index.html
+++ b/N.27/src/index.html
@@ -7,31 +7,32 @@
 <body>
     <form name='info' action='http://fe.it-academy.by/TestForm.php' novalidate>
         Разработчики:
-        <input type=text name='author' style='width: 453px' value='IT-Академия'>
+        <input type=text name='author' style='width: 453px'>
         <span id='authorErr' style='color:red'> </span>
         <br />
         <br /> Название сайта:
-        <input type=text name='sitename' style='width: 453px' value='Сайт IT-Академии'>
+        <input type=text name='sitename' style='width: 453px'>
         <span id='sitenameErr' style='color:red'> </span>
         <br />
         <br />URL сайта:
-        <input type=text name='siteurl' style='width: 453px' value='https://www.it-academy.by/'>
+        <input type=text name='siteurl' style='width: 453px'>
         <span id='siteurlErr' style='color:red'> </span>
         <br />
         <br /> Дата запуска сайта:
-        <input type=text name='startdate' style='width: 80px' value='18.04.2018'>
+        <input type=text name='startdate' style='width: 80px'>
         <span id='startdateErr' style='color:red'> </span>
         <br />
         <br /> Посетителей в сутки:
-        <input type=text name='visitors' style='width: 80px' value='100'>
+        <input type=text name='visitors' style='width: 80px'>
         <span id='visitorsErr' style='color:red'> </span>
         <br />
         <br /> E-mail для связи:
-        <input type=text name='email' style='width: 200px' value='Info@it-academy.by'>
+        <input type=text name='email' style='width: 200px'>
         <span id='emailErr' style='color:red'> </span>
         <br />
         <br /> Рубрика каталога:
         <select name='rubric'>
+            <option value=0>нет рубрики</option>
             <option value=1>здоровье</option>
             <option value=2>домашний уют</option>
             <option value=3>бытовая техника</option>
@@ -41,7 +42,7 @@
         <br />Размещение:
         <span id='placeErr' style='color:red'></span>
         <div id='place' style='width: 200px'>
-            <input type=radio name='placing' value=11 id='r1' checked>бесплатное
+            <input type=radio name='placing' value=11 id='r1'>бесплатное
             <br />
             <input type=radio name='placing' value=22 id='r2'>платное
             <br />
@@ -49,13 +50,13 @@
             <br />
         </div>
         <br /> Разрешить отзывы:
-        <input type=checkbox name='comments' id='с1' checked>
+        <input type=checkbox name='comments' id='с1'>
         <span id='commentsErr' style='color:red'></span>
         <br />
         <br /> Описание сайта:
         <span id='descriptionErr' style='color:red'></span>
         <br />
-        <textarea name='description' style='width: 608px; height: 50px'>без описания</textarea>
+        <textarea name='description' style='width: 608px; height: 50px'></textarea>
         <br />
         <br />
         <input type='submit' value='Опубликовать'>
