--- a/_N.20c/index.html
+++ b/_N.20c/index.html
@@ -18,15 +18,17 @@
 		// возвращает массив корней
 		function squareRoots(a, b, c) {
 			var d = b * b - 4 * a * c; // дискриминант
-
-			if (d < 0)
+			var x1 = (-b + Math.sqrt(d)) / (2 * a);
+			var x2 = (-b - Math.sqrt(d)) / (2 * a);
+			console.log(d);
+			if (d < 0
+				|| isNaN(x1) == true
+				|| isNaN(x2) == true)
 				return []; // нет корней
 
 			if (d == 0)
 				return [-b / (2 * a)]; // один корень
 
-			var x1 = (-b + Math.sqrt(d)) / (2 * a);
-			var x2 = (-b - Math.sqrt(d)) / (2 * a);
 			return [x1, x2]; // два корня
 		}
 
