--- a/aquarium/index.html
+++ b/aquarium/index.html
@@ -57,7 +57,7 @@
 
   <canvas id="canvas1" class="data"></canvas>
   <img id="snowflake" src="./img/heart.png" style="display:none" />
-  <img id="present" src="./img/worm.png" style="display:none" />
+  <img id="worm" src="./img/worm.png" style="display:none" />
   <img id="santa" src="./img/fish.png" style="display:none" />
 
   <!--<button id="playagain" onclick="startUp()">Play again?</button>-->
