--- a/aquarium/index.html
+++ b/aquarium/index.html
@@ -56,7 +56,7 @@
   </div>
 
   <canvas id="canvas1" class="data"></canvas>
-  <img id="snowflake" src="./img/heart.png" style="display:none" />
+  <img id="heart" src="./img/heart.png" style="display:none" />
   <img id="worm" src="./img/worm.png" style="display:none" />
   <img id="santa" src="./img/fish.png" style="display:none" />
 
