--- a/aquarium/index.html
+++ b/aquarium/index.html
@@ -62,7 +62,7 @@
 
   <script type='text/javascript' src='js/record.js'></script>
   <script type='text/javascript' src='js/main.js'></script>
-  <script type='text/javascript' src='js/SPA.js'></script>
+  <script type='text/javascript' src='js/singlePageApp.js'></script>
 
   <script>
     jQuery(document).ready(function ($) {
