--- a/AjaxStringStorage2/index.html
+++ b/AjaxStringStorage2/index.html
@@ -11,8 +11,8 @@
     "use strict";
 
     var ajaxHandlerScript = "https://fe.it-academy.by/AjaxStringStorage2.php";
-    var stringName = '1_TOR';
-    var valueTOR = '[{"name":"alex","score": 1}, {"name":"ilya","score":2}]';
+    var stringName = 'HAIDUK_AQUARIUMGAME_TOR';
+    var valueTOR = '[{"name":"ie","score": 1}, {"name":"android","score":2}]';
 
     function storeInfo() {
 
